--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   overflow-x: hidden;
    list-style: none;
    font-family: 'Poppins', Arial, sans-serif;
 }
@@ -12,24 +11,27 @@
    width: 70vw;
 }
 .container h1{
-   color: #270051;
+   color: #510000;
 }
 .container.hero{
    width: 100vw;
    height: 650px;
-   background: linear-gradient(40deg, #5000a7, #9b00d6bc);
+   font-size: 120%;
+   background: #ffff;
    text-shadow: 0 2px 5px #00000019;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: flex-start;
-   padding: 20px 20px 40px 20px;
-   color: #ffffffba;
+   padding: 20px 20px 80px 40px;
+   color: #000000ba;
    margin-top: 0;
-   border-radius: 0 0 40px 40px;
+   border: solid 1px rgba(46, 0, 42, 0.774);
+   border-radius: 0 0 60px 60px;
+   box-shadow: 0 30px 100px rgba(65, 0, 38, 0.171);
 }
 .container.contact{
-   height: 500px;
+   height: 800px;
    display: flex;
    flex-direction: column;
    gap: 40px;
@@ -38,14 +40,32 @@
    align-items: center;
 }
 .container.contact a{
-   color: whitesmoke;
-   background: linear-gradient(20deg, #5000a7, #9300a57f);
-   padding: 10px;
-   border-radius: 10px;
-   box-shadow: 0 2px 5px #00000019;
+   padding: 5px;
+}
+.container.contact a img{
+   width: 25px;
+   height: 25px;
+   filter: opacity(100%);
+}
+.contactAll{
+   color: #180018ba;
+   display: flex;
+   flex-direction: column;
+   gap: 40px;
+   align-items: flex-start;
+   margin-top: 30px;
+}
+.contactAll h2{
+   color: #3a0029ba;
+}
+.contactLeft, .contactRight{
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   align-items: flex-start;
 }
 .container.hero h1{
-   color: #ffffffba;
+   color: #180018ba;
 }
 .container.hype{
    height: 500px;
@@ -70,8 +90,8 @@
    gap: 40px;
 }
 .hero img{
-   width: 200px;
-   height: 200px;
+   width: 300px;
+   height: 300px;
    align-self: flex-end;
 }
 img{
@@ -89,7 +109,7 @@ img{
    display: none;
    height: 100vh;
    width: 100vw;
-   background: linear-gradient(45deg, #ffdfd5, #fff);
+   background: linear-gradient(45deg, #ffd5e9, #f9ffe9);
    filter: opacity(0%);
    z-index: 2;
 }
@@ -99,6 +119,15 @@ img{
    animation-fill-mode: forwards;   
 }
 .menu.back{
+   animation: back .5s 1 ease;
+   animation-fill-mode: forwards;
+}
+.contactAll.active{
+   display: block;
+   animation: slide-in .5s 1 ease;
+   animation-fill-mode: forwards;   
+}
+.contactAll.back{
    animation: back .5s 1 ease;
    animation-fill-mode: forwards;
 }
@@ -128,7 +157,7 @@ li{
 }
 a{
    text-decoration: none;
-   color: #5000a7;
+   color: #a70000;
 }
 .back{
    padding: 10px;
@@ -142,19 +171,18 @@ a{
    position: fixed;
    top: 0;
    width: 100vw;
-   background: transparent;
-   backdrop-filter: blur(5px);
+   background: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #130113;
    z-index: 3;
-   padding: 10px 20px 10px 20px;
-   filter: opacity(90%);
+   padding: 10px 40px 10px 20px;
+   border-bottom: solid 1px #130113;
 }
 .navbar p{
    font-weight: bold;
-   color: #130113;
+   color: #180000ba;
    text-shadow: 0 1px 2px #ffffff88;
 }
 .hamburger{
@@ -166,7 +194,7 @@ a{
    width: 22px;
    height: 3px;
    border-radius: 1.5px;
-   background: #130113;
+   background: #380000ba;
    cursor: pointer;
 }
 .ham.mid{
@@ -183,17 +211,17 @@ a{
    gap: 20px;
 }
 .buttons a{
-   background: whitesmoke;
+   background: linear-gradient(40deg, #9a4ed8, #d66161bc);
    font-size: 70%;
-   color: #5000a7;
+   color: #ffffff;
    padding: 5px 25px 5px 25px;
    border-radius: 10px;
    box-shadow: inset 0 0px 5px #00000019;
 }
 .hero .hire{
    background: transparent;
-   color: white;
-   border: solid 1px white;
+   color: #ad0600;
+   border: solid 1px #ad005f;
 }
 .summary{
    display: flex;
@@ -221,8 +249,8 @@ a{
    width: 300px;
    color: #270051;
    padding: 10px 20px 10px 20px;
-   box-shadow: 0 5px 10px #49006518;
-   border-radius: 10px;
+   box-shadow: 0 15px 25px #4800653f;
+   border-radius: 20px;
    justify-content: space-around;
    align-items: center;
 }
@@ -236,10 +264,10 @@ footer{
    align-items: center;
    gap: 20px;
    height: 250px;
-   background: linear-gradient(130deg, #5000a7, #9b00d6bc);
+   background: linear-gradient(40deg, #9a4ed8, #d6b161bc);
    color: #ffffffba;
    padding: 40px;
-   border-radius: 20px;
+   border-radius: 60px 60px 0 0;
    text-align: center;
    font-size: 120%;
 }
@@ -261,7 +289,61 @@ hr{
    gap: 20px;
    flex: 1;
 }
-#down{
+.container.faq{
+   display: flex;
+   flex-direction: column;
+   margin: 150px auto 100px auto;
+   gap: 40px;
+   justify-content: center;
+   align-items: center;
+   text-align: justify;
+   width: 70vw;
+}
+.container.faq h1{
+   color: #510000;
+   text-align: center;
+}
+.flex-box{
+   display: flex;
+   flex-direction: column;
+   gap: 0px;
+   width: 80vw;
+   justify-content: center;
+}
+.box-cells{
+   display: flex;
+   align-items: center;
+   gap: 20px;
+
+}
+.box-cells, .hid{
+   padding: 10px 20px 10px 20px;
+   border-bottom: solid .5px;
+}
+.more{
+   font-size: 25px;
+   transition: all .2s;
+   color: #510000;
+   cursor: pointer;
+}
+.more.active{
+   transform: rotate(45deg);
+}
+.hid{
+   display: none;
+   transition: all 1s;
+   color: #510000;
+}
+.hid.show{
+   display: block;
+}
+
+#down.active, .box-cells.active{
+   filter: opacity(100%);
+   transform: translateY(0px);
+}
+
+#down, .box-cells{
    filter: opacity(0%);
    transform: translateY(100px);
    transition: all .7s ease;
@@ -275,10 +357,6 @@ hr{
    filter: opacity(100%);
    transform: translateX(0px);
 }
-#down.active{
-   filter: opacity(100%);
-   transform: translateY(0px);
-}
 #right{
   filter: opacity(0%);
   transform: translateX(100px);
@@ -288,6 +366,7 @@ hr{
    filter: opacity(100%);
    transform: translateY(0px);
 }
+
 @media only screen and (min-width: 768px){
   .alter{
       display: flex;
@@ -303,6 +382,17 @@ hr{
       position: sticky;
       top: 0;
       z-index: 2;
+   }
+   .body{
+      display: flex;
+      justify-content: center;
+      padding: auto auto;
+   }
+   .flex-box{
+      width: 50vw;
+   }
+   .container.faq{
+      justify-self: center;
    }
    .container.hero{
       flex-direction: row;
@@ -321,8 +411,18 @@ hr{
       flex-direction: row;
    }
    .hero img{
-      width: 300px;
-      height: 300px;
+      width: 400px;
+      height: 400px;
      align-self: center;
    }
+   .contactAll{
+      display: flex;
+      flex-direction: row;
+      gap: 120px;
+      align-items: flex-start;
+      margin-top: 30px;
+}
+.box-cells, .hid{
+   width: 50vw;
+}
 }
