--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   overflow: hidden;
    list-style: none;
    font-family: 'Poppins', Arial, sans-serif;
 }
